2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Add 'svn' version tag.
	* exo-helper/exo-helper-chooser-dialog.[ch]: Add function to
	  retrieve the toplevel container beneath the GtkDialog's
	  GtkVBox.
	* exo-helper/exo-preferred-applications.desktop.in: Add
	  X-XfcePluggable and X-XfceHelpFile keys.
	* exo-helper/exo-preferred-applications.in: Pass any extra
	  command-line arguments on to exo-helper-0.3.
	* exo-helper/main.c: Use GOption framework for parsing the
	  command line.  Add --socket-id parameter so the dialog can
	  be embedded in the settings manager.

2008-10-10	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/helpers/Makefile.am, 
	  exo-helper/helpers/midori.desktop.in.in: Add Midori helper. Patch 
	  provided by Christian Dywan. This closes bug #4446.

2008-08-05	Brian Tarricone <bjt23@cornell.edu>

	* exo/exo-utils.h: Move the exo_atomic_inc()/exo_atomic_dec() inline
	  function decls into the #ifdef to fix compilation on non-x86
	  platforms (bug 4387).

2008-08-30	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Do not print errors when trying to detect the 
	  revision of a git svn repository.

2008-08-25	Brian Tarricone <kelnos@xfce.org>

	* exo-helper/exo-preferred-applications.desktop.in: Include
	  preferred apps dialog in new settings manager.

2008-08-12  Brian Tarricone <bjt23@cornell.edu>

	* exo-mount/exo-mount-hal.c: Add support for mounting and
	  unmounting encrypted volumes.  Patch from Colin Leroy.
	  Bug #3349.

200-07-26	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add @REVISION@ substitution support for git svn 
	  repositories.

2008-07-17	Nick Schermer <nick@xfce.org>

	* exo-csource/main.c: Don't strip text between nodes 
	  with --strip-content. This will make stripping work
	  on glade files.
	* configure.in.in: Version bump from 0.3.7 to 0.3.7.1.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-12-02	Benedikt Meurer <benny@xfce.org>
