@@ -1,3 +1,11 @@
+2008-11-03	Jannis Pohlmann <jannis@xfce.org>
+
+	* exo/exo-url.c: Check whether the given URL can be transformed into 
+	  a local filename before going through the regular expressions for 
+	  email addresses and browser URLs. Also don't allow additional 
+	  characters before and after email addresses and browser URLs. This 
+	  handles filenames with @ properly and should fix bug #4330.
+
 2008-10-22	Brian Tarricone <bjt23@cornell.edu>
 
 	* configure.in.in: Add 'svn' version tag.
